--- a/design.css
+++ b/design.css
@@ -1,105 +1,130 @@
+
+:root {
+	--dark: #1b1c1d;
+	--blue: #2185d0;
+	--green: #1ebc30;
+	--red: #db2828;
+	--white: #ffffff;
+	--gray: #babac0;
+	--secondary: #fbfdff;
+}
+
+ {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 body {
-	margin: 0;
-	padding: 0;
-	font-family: Arial, sans-serif;
+	color: var(--dark);
+	background: var(--secondary);
+	font-family: 'Lato', sans-serif;
+}
+.ui.grid + .grid {
+	margin-top: 0;
 }
 
-header {
-	background-color: #4CAF50;
-	color: #fff;
+
+body::-webkit-scrollbar {
+	background-color: var(--secondary);
+	width: 16px;
+}
+body::-webkit-scrollbar-track {
+	background-color: var(--secondary);
+}
+body::-webkit-scrollbar-thumb {
+	background-color: var(--gray);
+	border-radius: 16px;
+	border: 4px solid var(--white);
+}
+
+
+.main-header {
+	color: var(--white);
+	background: var(--blue);
+	padding: 1.5rem 0;
 	text-align: center;
-	padding: 20px;
 }
 
-h1 {
-	font-size: 36px;
-	margin: 0;
-}
 
-main {
-	max-width: 800px;
+#add-task {
+	width: 70%;
 	margin: 0 auto;
-	padding: 20px;
+	margin-top: 2rem;
+}
+#add-task input {
+	margin: 1.5rem auto;
 }
 
-form {
-	margin-bottom: 20px;
+
+#buttons {
+	width: 70%;
+	margin: 0 auto;
+	margin-bottom: 3rem;
 }
 
-label {
-	display: block;
-	font-size: 24px;
-	margin-bottom: 10px;
-}
 
-input[type="text"] {
-	width: 100%;
-	padding: 10px;
-	font-size: 24px;
-	border-radius: 5px;
-	border: none;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-}
-
-button[type="submit"] {
-	padding: 10px;
-	font-size: 24px;
-	border-radius: 5px;
-	background-color: #4CAF50;
-	color: #fff;
-	border: none;
-	cursor: pointer;
-}
-
-section {
-	margin-bottom: 30px;
-}
-
-h2 {
-	font-size: 24px;
-	margin-bottom: 10px;
-}
-
-ul {
+#tasks-list {
+	margin: 0 auto;
+	width: 70%;
 	list-style: none;
-	padding: 0;
-	margin: 0;
+}
+#tasks-list li {
+	width: 100%;
+}
+#tasks-list li .remove,
+#tasks-list li .edit {
+	opacity: 0;
+	transition: all 0.3s ease;
+}
+#tasks-list li:hover .remove,
+#tasks-list li:hover .edit {
+	opacity: 1;
+}
+#tasks-list li .column:last-child {
+	text-align: right;
+}
+#tasks-list li i {
+	cursor: pointer !important;
 }
 
-li {
-	font-size: 18px;
-	padding: 10px;
-	margin-bottom: 5px;
-	background-color: #f5f5f5;
-	border-radius: 5px;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+
+.alert {
+	width: 70%;
+	margin: 0 auto;
+	margin-bottom: 1rem;
+	text-align: center;
+	padding: 0.75rrem 1.25rrem;
+	border-radius: 10px;
+	line-height: 1.6rem;
+}
+.alert-warning {
+	color: #856404;
+	background-color: #fff3cd;
+	border-color: #ffeeba;
 }
 
-.completed {
-	background-color: #ddd;
-	text-decoration: line-through;
+
+.noty_theme__metroui.noty_bar .noty_body {
+	background: var(--green);
+	color: var(--white);
+	border-radius: 0.28571429rem;
+	box-shadow: 0 0 0 1px var(--green) inset, 0 0 0 0 transparent;
+}
+.noty_theme__metroui.noty_type__error {
+	background: none;
+}
+.noty_theme__metroui.noty_bar.noty_type__error .noty_body {
+	background: var(--red);
+	color: var(--white);
+	border-radius: 0.28571429rem !important;
+	box-shadow: 0 0 0 1px var(--red) inset, 0 0 0 0 transparent;
 }
 
-.actions {
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-}
 
-.actions button {
-	padding: 5px;
-	font-size: 18px;
-	border-radius: 5px;
-	background-color: #4CAF50;
-	color: #fff;
-	border: none;
-	margin-left: 10px;
-	cursor: pointer;
-}
-
-.actions button:hover {
-	background-color: #2e8b57;
+@media screen and (max-width: 770px) {
+	#add-task,
+	#buttons,
+	#tasks-list {
+		width: 100%;
+	}
 }
